Adding video features

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Youtube Clone</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <div class="navbar">
@@ -15,6 +16,22 @@
         <button type="button">Search icon</button>
 
         <img src="#" alt="Avatar">
+    </div>
+    <div class="main">
+        <iframe width="667" height="417" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Contributing to Open Source Part I: The Easy Way</h1>
+        <span>500,000 views</span>
+        <div class="menu-container">
+                <i class="material-icons" style="font-size:60px;color:red;">thumb_up</i>
+                <i class="material-icons" style="font-size:60px;color:green;">thumb_down</i>
+                <button type="button"><i class="material-icons" style="font-size:60px;color:green;">share</i></button>
+        </div>
+        <div class="menu-avatar">
+            <img src="https://yt3.ggpht.com/a/AGF-l79PHE32UB5d2fnmwsiJXu3vv_fnC_SNO899VQ=s88-c-k-c0xffffffff-no-rj-mo" alt="avatar">
+            <button type="button">Subscribe</button>
+        </div>
+
+
     </div>
 </body>
 </html>
