changing the sidebar and subscribe button

--- a/index.html
+++ b/index.html
@@ -33,38 +33,48 @@
                 <div class="menu-below-video">
                     <span class="text-views">500,000 views</span>
                     <div class="menu-container">
-                            <button type="button"><i class="material-icons" style="font-size:30px;color:red;">thumb_up</i></button>
-                            <button type="button"><i class="material-icons" style="font-size:30px;color:green;">thumb_down</i></button>
-                            <button type="button"><i class="material-icons" style="font-size:30px;color:green;">share</i></button>
+                            <button class="video-action" type="button"><i class="material-icons" >thumb_up</i></button>
+                            <button class="video-action" type="button"><i class="material-icons">thumb_down</i></button>
+                            <button class="video-action" type="button"><i class="material-icons">share</i></button>
                     </div>
                 </div>
                 <div class="menu-avatar">
                     <img src="https://yt3.ggpht.com/a/AGF-l79PHE32UB5d2fnmwsiJXu3vv_fnC_SNO899VQ=s88-c-k-c0xffffffff-no-rj-mo" alt="avatar">
-                    <button type="button">Subscribe</button>
+                    <div>
+                        <button class="subscribe-button" type="button">SUBSCRIBE</button>
+                    </div>
                 </div>
             </div>
         </div>
             <div class="section-sidebar">
                 <ul class="recommended-videos">
                     <li class="rec-video">
-                        <iframe width="150" height="150" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <span class="rec-video-title">Video title</span>
-                        <span class="rec-video-views">457 views</span>
+                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="rec-video-info">
+                            <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
+                            <span class="rec-video-views">457 views</span>
+                        </div>
                     </li>
                     <li class="rec-video">
-                        <iframe width="150" height="150" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <span class="rec-video-title">Video title</span>
-                        <span class="rec-video-views">457 views</span>
+                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="rec-video-info">
+                            <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
+                            <span class="rec-video-views">457 views</span>
+                        </div>
                     </li>
                     <li class="rec-video">
-                        <iframe width="150" height="150" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <span class="rec-video-title">Video title</span>
-                        <span class="rec-video-views">457 views</span>
+                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="rec-video-info">
+                            <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
+                            <span class="rec-video-views">457 views</span>
+                        </div>
                     </li>
                     <li class="rec-video">
-                        <iframe width="150" height="150" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <span class="rec-video-title">Video title</span>
-                        <span class="rec-video-views">457 views</span>
+                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="rec-video-info">
+                            <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
+                            <span class="rec-video-views">457 views</span>
+                        </div>
                     </li>
                 </ul>
             </div>
