Changing videos to images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
                     </div>
                 </div>
                 <div class="menu-avatar">
-                    <img src="https://yt3.ggpht.com/a/AGF-l79PHE32UB5d2fnmwsiJXu3vv_fnC_SNO899VQ=s88-c-k-c0xffffffff-no-rj-mo" alt="avatar">
+                    <div class="name-user">
+                        <img src="https://yt3.ggpht.com/a/AGF-l79PHE32UB5d2fnmwsiJXu3vv_fnC_SNO899VQ=s88-c-k-c0xffffffff-no-rj-mo" alt="avatar">
+                        <span>Pedro</span>
+                        <div class="text-description">
+                            <span>jjjj</span>
+                        </div>
+                    </div>
                     <div>
                         <button class="subscribe-button" type="button">SUBSCRIBE</button>
                     </div>
@@ -49,28 +55,28 @@
             <div class="section-sidebar">
                 <ul class="recommended-videos">
                     <li class="rec-video">
-                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="video-1"></div>
                         <div class="rec-video-info">
                             <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
                             <span class="rec-video-views">457 views</span>
                         </div>
                     </li>
                     <li class="rec-video">
-                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="video-2"></div>
                         <div class="rec-video-info">
                             <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
                             <span class="rec-video-views">457 views</span>
                         </div>
                     </li>
                     <li class="rec-video">
-                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="video-3"></div>
                         <div class="rec-video-info">
                             <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
                             <span class="rec-video-views">457 views</span>
                         </div>
                     </li>
                     <li class="rec-video">
-                        <iframe width="200" height="116" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="video-4"></div>
                         <div class="rec-video-info">
                             <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
                             <span class="rec-video-views">457 views</span>
