--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Youtube Clone</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel=“stylesheet”>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
 
         <div class="nav-logo">
             <i class="material-icons">menu</i>
-            <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Logo_of_YouTube_%282015-2017%29.svg/1280px-Logo_of_YouTube_%282015-2017%29.svg.png">
+            <img id="logo" alt="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Logo_of_YouTube_%282015-2017%29.svg/1280px-Logo_of_YouTube_%282015-2017%29.svg.png">
         </div>
 
         <div class="search-container">
@@ -28,11 +28,11 @@
             <a><i class='material-icons'>video_call</i></a>
             <div class="navbar-avatar"></div>
         </div>
-    </div>
-    <div class="main">
+    </nav>
+    <main class="main">
         <div class="section-video-avatar">
             <div class="video">
-                <iframe width="1024" height="640" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="1024" height="640" src="https://www.youtube.com/embed/V74l_zS1x8E"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h1>Contributing to Open Source Part I: The Easy Way</h1>
                 <div class="menu-below-video">
                     <span class="text-views">500,000 views</span>
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="section-sidebar">
+        <aside class="section-sidebar">
             <span>Up next</span>
             <div class="playlist-next rec-video">
                 <div class="video-1">
@@ -107,7 +107,7 @@
                     </div>
                 </li>
             </ul>
-        </div>
-    </div>
+        </aside>
+    </main>
 </body>
 </html>
