Creating a folder for the css file and removing a typo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Youtube Clone</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="rec-video-info">
                         <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
-                        <span class="rec-video-views">457 views</span>
+                        <span class="rec-video-views">1M views</span>
                     </div>
                 </li>
                 <li class="rec-video">
@@ -94,7 +94,7 @@
                     </div>
                     <div class="rec-video-info">
                         <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
-                        <span class="rec-video-views">457 views</span>
+                        <span class="rec-video-views">44,024 views</span>
                     </div>
                 </li>
                 <li class="rec-video">
@@ -103,7 +103,7 @@
                     </div>
                     <div class="rec-video-info">
                         <span class="rec-video-title">Lorem Ipsum Dolor Siamet</span>
-                        <span class="rec-video-views">457 views</span>
+                        <span class="rec-video-views">3,102 views</span>
                     </div>
                 </li>
             </ul>
